--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@ body {
     font-weight: lighter;
     font-size: 22px;
   }
+  /* footer style star*/
   footer {
     background: #fce138;
     width: 100%;
@@ -62,6 +63,8 @@ body {
     padding: 0;
     box-sizing: border-box;
   }
+    /* footer style end */
+
   section {
     padding: 60px;
   }
@@ -71,11 +74,46 @@ body {
   height: 600px;
   background-size: cover;
   background-position: center;
-}      /* Hero Style End */
+  position: relative;
+
+}      
 .hero-form {
-  color:#024e76;
+  border: solid 3px #024e76;  
   background-color:#fce138;
   padding: 20px;
   width: 500px;
-  border: solid 3px #024e76;
+  color:#024e76;
+  position: absolute;
+  bottom: 120 px; /*120*/
+  right: 140px;
    }
+
+   .hero-form h3 {
+    font-size: 24px;
+    margin: 0;
+  }
+  
+  .hero-form p {
+    margin: 5px 0 15px 0;
+  }
+  
+  .form-input {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  .hero-form label {
+    margin: 0 5px;
+  }
+   .hero-form button {
+  color: #fce138;
+  padding: 10px 20px;
+  background-color: #024e76;
+  border: none;
+  font-size: 16px;
+   }
+   /* Hero Style End */
