--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -16,7 +16,8 @@
   .secondary-content{
       width:80%;      
       color:#024e76;
-      margin-left:160px;
+      margin:30px 0 0 60px
+      
      }
   .secondary-content h3{
       font-size: 25px;
