--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,30 +136,28 @@ body {
    }
               /* Hero Style End */
  /* section what you do*/
-   .intro {
-    text-align: center;
-  }
-  
+   
   .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
-  }              /*  what we do  end*/
-   /*  what  do  star*/
+    text-align: center
+  }              
+   /*  what you  do  star*/
   .steps { 
-    text-align: center;
-    background: #fce138;
+  background: #fce138;
   }
  
  .section-title {
   font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
+  color: #024e76;  
   border-bottom: 3px solid;
+  padding-bottom: 20px;
+  text-align: center; 
+  margin: 0 auto 35px auto;
+  width: 50%;
 }
 
 .primary-border {
@@ -192,10 +190,10 @@ body {
   font-size: 38px;
 }                  /*What you do end */
   /* trainers star*/
-.trainers {
-  text-align: center;
+/*.trainers {
+  text-align: center;     eliminarse
   
-}
+}*/
 .trainer {
   width: 900px;
   margin: 0 auto 30px auto;
@@ -211,6 +209,9 @@ body {
   padding: 35px;
   float: left;
   width: 65%;
+}
+.flex-row {
+  display: flex;
 }
 .text-left {
   text-align: left;
@@ -242,8 +243,7 @@ body {
 }
 /* reach out star*/
 .contact {
-  text-align: center;
-  background: #024e76;
+    background: #024e76;
 }
 .contact h2 {
   color: #fce138;
