--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,7 +159,6 @@ body {
   margin: 0 auto 35px auto;
   width: 50%;
 }
-
 .primary-border {
   border-color: #fce138;
 }
@@ -206,54 +205,53 @@ body {
 }
 .step-img img {  /*para navegadores como edge* tener en cuenta*/
   max-width: 100%;
+
+}    /*trainers section star */
+
+.trainers {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 .trainer {
-  width: 900px;
-  margin: 0 auto 30px auto;
+  margin:20px;                   
   background: #024e76;
   color: #fce138;
-  overflow: auto
+  flex: 1;
+ 
 }
 .trainer img {
-  width: 35%;
-  float: left;
+  width: 100%;
+  
 }
 .trainer-bio {
-  padding: 35px;
-  float: left;
-  width: 65%;
-}
-.flex-row {
-  display: flex;
-}
-.text-left {
-  text-align: left;
-}
-.text-right {
-  text-align: right;
+  padding: 25px;  
+ line-height: 1.3;
 }
 .trainer-bio h3 {
-  font-size: 32px;
-  margin-bottom: 8px;
-}
+  font-size: 28px;
+ }
 .trainer-bio h4 {
   font-weight: lighter;
-  font-size: 26px;
-  margin-bottom: 25px;
+  font-size: 22px;
+  margin-bottom: 15px;
 }
 .trainer-bio p {
   font-size: 17px;
-  line-height: 1.3;
-}        /*  trainer style end */
+ }                  
+ 
+ /*.trainer-name{
 
-.section-title {
-  font-size: 55px;
-  display: inline-block;
-  padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  margin-bottom: 35px;
-  color: #024e76;
-}
+ }
+
+ .trainer-role{
+
+ }*/
+ /*  trainer style end */
+
+
 /* reach out star*/
 .contact {
     background: #024e76;
