--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
     padding: 20px 35px;
     background-color: #39a6b2;
     display: flex;
-    justify-content: space-between;
+    justify-content:center;
     flex-wrap: wrap;
   }
 
@@ -87,12 +87,11 @@ body {
  }    
  .hero-cta {
   width: 35%;
-  text-align: right;
+ text-align: right;
   margin: 3.5%;
   color: #fff;
   font-size: 18px;
   line-height: 1.2;
-
 }
 .hero-cta h2 {
   font-style: italic;
@@ -301,6 +300,17 @@ margin-top: 5px;
   padding: 15px 0;
   font-size: 16px;
 }
+.service-grid-container{
+  display:grid;
+}
+.service-grid-item{
+  width: 200px;
+  height: 50px;
+  background-color: orange;
+  border: solid;
+  color: black;
+}
+
  /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {/* this will be applied on any screen smaller than 980px */
   header {
