--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,10 @@
   margin: 0;
   padding: 0;
 }
-
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 body {
     color: var(--tertiary-color);
     font-family: Helvetica, Arial, sans-serif;
@@ -320,12 +323,52 @@ body {
   background: var(--secondary-color);
   color: var(--primary-color);
   flex: 1;
+ }
+ .trainer-1 {
+  background-image: url("../images/trainer-1.jpg");
+}
+.trainer-2 {
+  background-image: url("../images/trainer-2.jpg");
+}
+.trainer-3 {
+  background-image: url("../images/trainer-3.jpg");
+}
+.trainer-img {
+  width: 100%;
+  min-height: 300px;
+  background-size: cover;
+  display: flex;
+  padding: 15px;
+ align-items:flex-end;
+ position: relative; 
  
 }
-.trainer img {
+.trainer-img::after {
+  content: "";
+  height: 100%;
   width: 100%;
-  
+  background:linear-gradient(180deg, rgba(252,225,56,0.3)0%,rgba(2,78,118,1)100% );
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  }
+.trainer:hover{
+  opacity: 1;
 }
+.trainer-img h3 {
+  position: relative;
+  z-index:9850 ; 
+  font-size: 28px;
+  margin-bottom:5px;
+}
+
+.trainer-img h4 {
+  position: relative;
+  z-index:9850 ;
+  font-size: 22px;
+}
+
 .trainer-bio {
   padding: 25px;  
  line-height: 1.3;
