--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,13 +314,14 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  /*overflow: hidden;*/
 }
 .trainer {
   margin:20px;                   
   background: var(--secondary-color);
   color: var(--primary-color);
   flex: 1;
- 
+ /*overflow: hidden;*/
 }
 .trainer img {
   width: 100%;
@@ -340,8 +341,63 @@ body {
 }
 .trainer-bio p {
   font-size: 17px;
- }                  
+ }   
+ .trainer-1 {
+  background-image: url("../images/trainer-1.jpg");
+}    
+.trainer-2 {
+  background-image: url("../images/trainer-2.jpg");
+}  
+.trainer-3 {
+  background-image: url("../images/trainer-3.jpg");
+}   
+.trainer-img {
+  width: 100%;
+  min-height: 300px;
+  background-size:cover;
+  display: flex;
+ padding: 15px;
+align-items: flex-end;
+position: relative;
+}  
+
+.trainer-img h3 {
+  position: relative;
+  z-index: 10300;
+  font-size:28px;
+  margin-bottom: 5px;
   
+}
+
+.trainer-img h4 {
+  position: relative;
+  z-index: 10300;
+  font-size:22px;
+  
+}
+.trainer-img::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background:linear-gradient(rgba(252, 225, 56, 0.3),var(--secondary-color)) ;
+  position: absolute;
+  top: 0;
+  left: 0;
+  
+  } 
+
+ .trainer:hover .trainer-img h3, .trainer:hover .trainer-img h4 {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background:linear-gradient(rgba(252, 225, 56, 0.3),var(--secondary-color)) ;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: .5s;
+} 
+
  /*  trainer style end */
 
 
