--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,19 +314,16 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  /*overflow: hidden;*/
+ 
 }
 .trainer {
   margin:20px;                   
   background: var(--secondary-color);
   color: var(--primary-color);
   flex: 1;
- /*overflow: hidden;*/
+ 
 }
-.trainer img {
-  width: 100%;
-  
-}
+
 .trainer-bio {
   padding: 25px;  
  line-height: 1.3;
@@ -355,47 +352,46 @@ body {
   width: 100%;
   min-height: 300px;
   background-size:cover;
+  background-position: top;
   display: flex;
  padding: 15px;
 align-items: flex-end;
 position: relative;
+overflow: hidden;
 }  
-
 .trainer-img h3 {
   position: relative;
-  z-index: 10300;
+  z-index: 1;
   font-size:28px;
+  top: 200px;
   margin-bottom: 5px;
-  
-}
+  transition-duration: 0.6s;
+  transition-timing-function: ease-in-out;
 
+}
 .trainer-img h4 {
   position: relative;
-  z-index: 10300;
+  z-index: 1;
   font-size:22px;
-  
+  top: 200px;
+  transition-duration: 0.6s;
+  transition-timing-function: ease-in-out;
 }
 .trainer-img::after {
   content: "";
   height: 100%;
   width: 100%;
+  display: block;
   background:linear-gradient(rgba(252, 225, 56, 0.3),var(--secondary-color)) ;
   position: absolute;
   top: 0;
-  left: 0;
-  
-  } 
+  left: 0;  
+  transition: .5s linear;
+   } 
 
  .trainer:hover .trainer-img h3, .trainer:hover .trainer-img h4 {
-  content: "";
-  height: 100%;
-  width: 100%;
-  background:linear-gradient(rgba(252, 225, 56, 0.3),var(--secondary-color)) ;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  transition: .5s;
+ 
+  transform:translateY(-200px);
 } 
 
  /*  trainer style end */
