--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ body {
     font-size: 36px;
     color: var(--primary-color);
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
      }
 
    header a {
@@ -171,6 +172,7 @@ body {
     margin: 10px;
     line-height: 1.6;
    }
+
    .checkbox-wrapper label::before, .radio-wrapper label::before {
     content: "";
     height: 20px;
